server/analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONCAT
    LLAVDER
    LLAVIZQ
    NOTHING

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print_instr PTCOMA
Rule 5     instruccion -> println_instr PTCOMA
Rule 6     instruccion -> definicion_instr PTCOMA
Rule 7     instruccion -> asignacion_instr PTCOMA
Rule 8     instruccion -> asignacion_arreglo_instr PTCOMA
Rule 9     instruccion -> definicion_asignacion_instr PTCOMA
Rule 10    instruccion -> call_function PTCOMA
Rule 11    instruccion -> declare_function PTCOMA
Rule 12    instruccion -> return_state PTCOMA
Rule 13    instruccion -> break_state PTCOMA
Rule 14    instruccion -> continue_state PTCOMA
Rule 15    instruccion -> if_state PTCOMA
Rule 16    instruccion -> while_state PTCOMA
Rule 17    instruccion -> for_state PTCOMA
Rule 18    instruccion -> nativas PTCOMA
Rule 19    instruccion -> create_struct PTCOMA
Rule 20    instruccion -> declare_struct PTCOMA
Rule 21    instruccion -> assign_access PTCOMA
Rule 22    expression -> MENOS expression
Rule 23    expression -> NOT expression
Rule 24    expression -> expression MAS expression
Rule 25    expression -> expression MENOS expression
Rule 26    expression -> expression POR expression
Rule 27    expression -> expression DIVIDIDO expression
Rule 28    expression -> expression POTENCIA expression
Rule 29    expression -> expression MODULO expression
Rule 30    expression -> expression MAYQUE expression
Rule 31    expression -> expression MENQUE expression
Rule 32    expression -> expression MENIGUALQUE expression
Rule 33    expression -> expression MAYIGUALQUE expression
Rule 34    expression -> expression IGUALQUE expression
Rule 35    expression -> expression NIGUALQUE expression
Rule 36    expression -> expression OR expression
Rule 37    expression -> expression AND expression
Rule 38    expression -> final_expression
Rule 39    final_expression -> PARIZQ expression PARDER
Rule 40    final_expression -> CORCHETEIZQ exp_list CORCHETEDER
Rule 41    final_expression -> DECIMAL
Rule 42    final_expression -> ENTERO
Rule 43    final_expression -> CADENA
Rule 44    final_expression -> CARACTER
Rule 45    final_expression -> ID
Rule 46    final_expression -> ID index_list
Rule 47    final_expression -> TRUE
Rule 48    final_expression -> FALSE
Rule 49    final_expression -> call_function
Rule 50    final_expression -> nativas
Rule 51    nativas -> LOG PARIZQ ENTERO COMA expression PARDER
Rule 52    nativas -> LOG10 PARIZQ expression PARDER
Rule 53    nativas -> COS PARIZQ expression PARDER
Rule 54    nativas -> SIN PARIZQ expression PARDER
Rule 55    nativas -> TAN PARIZQ expression PARDER
Rule 56    nativas -> SQRT PARIZQ expression PARDER
Rule 57    nativas -> UPPERCASE PARIZQ expression PARDER
Rule 58    nativas -> LOWERCASE PARIZQ expression PARDER
Rule 59    nativas -> TOSTRING PARIZQ expression PARDER
Rule 60    nativas -> TOFLOAT PARIZQ expression PARDER
Rule 61    nativas -> TRUNC PARIZQ INT COMA expression PARDER
Rule 62    nativas -> TYPEOF PARIZQ expression PARDER
Rule 63    nativas -> PARSE PARIZQ tipo COMA expression PARDER
Rule 64    nativas -> LENGTH PARIZQ expression PARDER
Rule 65    nativas -> PUSH PARIZQ expression COMA expression PARDER
Rule 66    nativas -> POP PARIZQ expression PARDER
Rule 67    print_instr -> PRINT PARIZQ exp_list PARDER
Rule 68    println_instr -> PRINTLN PARIZQ exp_list PARDER
Rule 69    tipo -> INT
Rule 70    tipo -> FLOAT
Rule 71    tipo -> BOOL
Rule 72    tipo -> CHAR
Rule 73    tipo -> STRING
Rule 74    definicion_instr -> LOCAL ID
Rule 75    definicion_instr -> GLOBAL ID
Rule 76    asignacion_instr -> ID IGUAL expression
Rule 77    asignacion_instr -> LOCAL ID IGUAL expression
Rule 78    asignacion_instr -> GLOBAL ID IGUAL expression
Rule 79    definicion_asignacion_instr -> ID IGUAL expression DOSP DOSP tipo
Rule 80    definicion_asignacion_instr -> LOCAL ID IGUAL expression DOSP DOSP tipo
Rule 81    definicion_asignacion_instr -> GLOBAL ID IGUAL expression DOSP DOSP tipo
Rule 82    asignacion_arreglo_instr -> ID index_list IGUAL expression
Rule 83    call_function -> ID PARIZQ PARDER
Rule 84    call_function -> ID PARIZQ exp_list PARDER
Rule 85    exp_list -> exp_list COMA expression
Rule 86    exp_list -> expression
Rule 87    index_list -> index_list CORCHETEIZQ expression CORCHETEDER
Rule 88    index_list -> CORCHETEIZQ expression CORCHETEDER
Rule 89    statement -> instrucciones
Rule 90    declare_function -> FUNCTION ID PARIZQ PARDER statement END
Rule 91    declare_function -> FUNCTION ID PARIZQ dec_params PARDER statement END
Rule 92    dec_params -> dec_params COMA ID
Rule 93    dec_params -> ID
Rule 94    if_state -> IF expression statement END
Rule 95    if_state -> IF expression statement ELSE statement END
Rule 96    if_state -> IF expression statement else_if_list END
Rule 97    else_if_list -> ELSEIF expression statement
Rule 98    else_if_list -> ELSEIF expression statement ELSE statement
Rule 99    else_if_list -> ELSEIF expression statement else_if_list
Rule 100   while_state -> WHILE expression statement END
Rule 101   for_state -> FOR ID IN expression DOSP expression statement END
Rule 102   for_state -> FOR ID IN expression statement END
Rule 103   break_state -> BREAK
Rule 104   continue_state -> CONTINUE
Rule 105   return_state -> RETURN
Rule 106   return_state -> RETURN expression
Rule 107   create_struct -> STRUCT ID attList END
Rule 108   attList -> attList ID PTCOMA
Rule 109   attList -> ID PTCOMA
Rule 110   declare_struct -> ID DOSP DOSP ID
Rule 111   assign_access -> ID PUNTO ID IGUAL expression

Terminals, with rules where they appear

AND                  : 37
BOOL                 : 71
BREAK                : 103
CADENA               : 43
CARACTER             : 44
CHAR                 : 72
COMA                 : 51 61 63 65 85 92
CONCAT               : 
CONTINUE             : 104
CORCHETEDER          : 40 87 88
CORCHETEIZQ          : 40 87 88
COS                  : 53
DECIMAL              : 41
DIVIDIDO             : 27
DOSP                 : 79 79 80 80 81 81 101 110 110
ELSE                 : 95 98
ELSEIF               : 97 98 99
END                  : 90 91 94 95 96 100 101 102 107
ENTERO               : 42 51
FALSE                : 48
FLOAT                : 70
FOR                  : 101 102
FUNCTION             : 90 91
GLOBAL               : 75 78 81
ID                   : 45 46 74 75 76 77 78 79 80 81 82 83 84 90 91 92 93 101 102 107 108 109 110 110 111 111
IF                   : 94 95 96
IGUAL                : 76 77 78 79 80 81 82 111
IGUALQUE             : 34
IN                   : 101 102
INT                  : 61 69
LENGTH               : 64
LLAVDER              : 
LLAVIZQ              : 
LOCAL                : 74 77 80
LOG                  : 51
LOG10                : 52
LOWERCASE            : 58
MAS                  : 24
MAYIGUALQUE          : 33
MAYQUE               : 30
MENIGUALQUE          : 32
MENOS                : 22 25
MENQUE               : 31
MODULO               : 29
NIGUALQUE            : 35
NOT                  : 23
NOTHING              : 
OR                   : 36
PARDER               : 39 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 83 84 90 91
PARIZQ               : 39 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 83 84 90 91
PARSE                : 63
POP                  : 66
POR                  : 26
POTENCIA             : 28
PRINT                : 67
PRINTLN              : 68
PTCOMA               : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 108 109
PUNTO                : 111
PUSH                 : 65
RETURN               : 105 106
SIN                  : 54
SQRT                 : 56
STRING               : 73
STRUCT               : 107
TAN                  : 55
TOFLOAT              : 60
TOSTRING             : 59
TRUE                 : 47
TRUNC                : 61
TYPEOF               : 62
UPPERCASE            : 57
WHILE                : 100
error                : 

Nonterminals, with rules where they appear

asignacion_arreglo_instr : 8
asignacion_instr     : 7
assign_access        : 21
attList              : 107 108
break_state          : 13
call_function        : 10 49
continue_state       : 14
create_struct        : 19
dec_params           : 91 92
declare_function     : 11
declare_struct       : 20
definicion_asignacion_instr : 9
definicion_instr     : 6
else_if_list         : 96 99
exp_list             : 40 67 68 84 85
expression           : 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 39 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 65 66 76 77 78 79 80 81 82 85 86 87 88 94 95 96 97 98 99 100 101 101 102 106 111
final_expression     : 38
for_state            : 17
if_state             : 15
index_list           : 46 82 87
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 89
nativas              : 18 50
print_instr          : 4
println_instr        : 5
return_state         : 12
statement            : 90 91 94 95 95 96 97 98 98 99 100 101 102
tipo                 : 63 79 80 81
while_state          : 16

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print_instr PTCOMA
    (5) instruccion -> . println_instr PTCOMA
    (6) instruccion -> . definicion_instr PTCOMA
    (7) instruccion -> . asignacion_instr PTCOMA
    (8) instruccion -> . asignacion_arreglo_instr PTCOMA
    (9) instruccion -> . definicion_asignacion_instr PTCOMA
    (10) instruccion -> . call_function PTCOMA
    (11) instruccion -> . declare_function PTCOMA
    (12) instruccion -> . return_state PTCOMA
    (13) instruccion -> . break_state PTCOMA
    (14) instruccion -> . continue_state PTCOMA
    (15) instruccion -> . if_state PTCOMA
    (16) instruccion -> . while_state PTCOMA
    (17) instruccion -> . for_state PTCOMA
    (18) instruccion -> . nativas PTCOMA
    (19) instruccion -> . create_struct PTCOMA
    (20) instruccion -> . declare_struct PTCOMA
    (21) instruccion -> . assign_access PTCOMA
    (67) print_instr -> . PRINT PARIZQ exp_list PARDER
    (68) println_instr -> . PRINTLN PARIZQ exp_list PARDER
    (74) definicion_instr -> . LOCAL ID
    (75) definicion_instr -> . GLOBAL ID
    (76) asignacion_instr -> . ID IGUAL expression
    (77) asignacion_instr -> . LOCAL ID IGUAL expression
    (78) asignacion_instr -> . GLOBAL ID IGUAL expression
    (82) asignacion_arreglo_instr -> . ID index_list IGUAL expression
    (79) definicion_asignacion_instr -> . ID IGUAL expression DOSP DOSP tipo
    (80) definicion_asignacion_instr -> . LOCAL ID IGUAL expression DOSP DOSP tipo
    (81) definicion_asignacion_instr -> . GLOBAL ID IGUAL expression DOSP DOSP tipo
    (83) call_function -> . ID PARIZQ PARDER
    (84) call_function -> . ID PARIZQ exp_list PARDER
    (90) declare_function -> . FUNCTION ID PARIZQ PARDER statement END
    (91) declare_function -> . FUNCTION ID PARIZQ dec_params PARDER statement END
    (105) return_state -> . RETURN
    (106) return_state -> . RETURN expression
    (103) break_state -> . BREAK
    (104) continue_state -> . CONTINUE
    (94) if_state -> . IF expression statement END
    (95) if_state -> . IF expression statement ELSE statement END
    (96) if_state -> . IF expression statement else_if_list END
    (100) while_state -> . WHILE expression statement END
    (101) for_state -> . FOR ID IN expression DOSP expression statement END
    (102) for_state -> . FOR ID IN expression statement END
    (51) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (52) nativas -> . LOG10 PARIZQ expression PARDER
    (53) nativas -> . COS PARIZQ expression PARDER
    (54) nativas -> . SIN PARIZQ expression PARDER
    (55) nativas -> . TAN PARIZQ expression PARDER
    (56) nativas -> . SQRT PARIZQ expression PARDER
    (57) nativas -> . UPPERCASE PARIZQ expression PARDER
    (58) nativas -> . LOWERCASE PARIZQ expression PARDER
    (59) nativas -> . TOSTRING PARIZQ expression PARDER
    (60) nativas -> . TOFLOAT PARIZQ expression PARDER
    (61) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (62) nativas -> . TYPEOF PARIZQ expression PARDER
    (63) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (64) nativas -> . LENGTH PARIZQ expression PARDER
    (65) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (66) nativas -> . POP PARIZQ expression PARDER
    (107) create_struct -> . STRUCT ID attList END
    (110) declare_struct -> . ID DOSP DOSP ID
    (111) assign_access -> . ID PUNTO ID IGUAL expression

    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    LOCAL           shift and go to state 24
    GLOBAL          shift and go to state 26
    ID              shift and go to state 25
    FUNCTION        shift and go to state 27
    RETURN          shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    LOG             shift and go to state 34
    LOG10           shift and go to state 35
    COS             shift and go to state 36
    SIN             shift and go to state 37
    TAN             shift and go to state 38
    SQRT            shift and go to state 39
    UPPERCASE       shift and go to state 40
    LOWERCASE       shift and go to state 41
    TOSTRING        shift and go to state 42
    TOFLOAT         shift and go to state 43
    TRUNC           shift and go to state 44
    TYPEOF          shift and go to state 45
    PARSE           shift and go to state 46
    LENGTH          shift and go to state 47
    PUSH            shift and go to state 48
    POP             shift and go to state 49
    STRUCT          shift and go to state 50

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print_instr                    shift and go to state 4
    println_instr                  shift and go to state 5
    definicion_instr               shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion_arreglo_instr       shift and go to state 8
    definicion_asignacion_instr    shift and go to state 9
    call_function                  shift and go to state 10
    declare_function               shift and go to state 11
    return_state                   shift and go to state 12
    break_state                    shift and go to state 13
    continue_state                 shift and go to state 14
    if_state                       shift and go to state 15
    while_state                    shift and go to state 16
    for_state                      shift and go to state 17
    nativas                        shift and go to state 18
    create_struct                  shift and go to state 19
    declare_struct                 shift and go to state 20
    assign_access                  shift and go to state 21

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print_instr PTCOMA
    (5) instruccion -> . println_instr PTCOMA
    (6) instruccion -> . definicion_instr PTCOMA
    (7) instruccion -> . asignacion_instr PTCOMA
    (8) instruccion -> . asignacion_arreglo_instr PTCOMA
    (9) instruccion -> . definicion_asignacion_instr PTCOMA
    (10) instruccion -> . call_function PTCOMA
    (11) instruccion -> . declare_function PTCOMA
    (12) instruccion -> . return_state PTCOMA
    (13) instruccion -> . break_state PTCOMA
    (14) instruccion -> . continue_state PTCOMA
    (15) instruccion -> . if_state PTCOMA
    (16) instruccion -> . while_state PTCOMA
    (17) instruccion -> . for_state PTCOMA
    (18) instruccion -> . nativas PTCOMA
    (19) instruccion -> . create_struct PTCOMA
    (20) instruccion -> . declare_struct PTCOMA
    (21) instruccion -> . assign_access PTCOMA
    (67) print_instr -> . PRINT PARIZQ exp_list PARDER
    (68) println_instr -> . PRINTLN PARIZQ exp_list PARDER
    (74) definicion_instr -> . LOCAL ID
    (75) definicion_instr -> . GLOBAL ID
    (76) asignacion_instr -> . ID IGUAL expression
    (77) asignacion_instr -> . LOCAL ID IGUAL expression
    (78) asignacion_instr -> . GLOBAL ID IGUAL expression
    (82) asignacion_arreglo_instr -> . ID index_list IGUAL expression
    (79) definicion_asignacion_instr -> . ID IGUAL expression DOSP DOSP tipo
    (80) definicion_asignacion_instr -> . LOCAL ID IGUAL expression DOSP DOSP tipo
    (81) definicion_asignacion_instr -> . GLOBAL ID IGUAL expression DOSP DOSP tipo
    (83) call_function -> . ID PARIZQ PARDER
    (84) call_function -> . ID PARIZQ exp_list PARDER
    (90) declare_function -> . FUNCTION ID PARIZQ PARDER statement END
    (91) declare_function -> . FUNCTION ID PARIZQ dec_params PARDER statement END
    (105) return_state -> . RETURN
    (106) return_state -> . RETURN expression
    (103) break_state -> . BREAK
    (104) continue_state -> . CONTINUE
    (94) if_state -> . IF expression statement END
    (95) if_state -> . IF expression statement ELSE statement END
    (96) if_state -> . IF expression statement else_if_list END
    (100) while_state -> . WHILE expression statement END
    (101) for_state -> . FOR ID IN expression DOSP expression statement END
    (102) for_state -> . FOR ID IN expression statement END
    (51) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (52) nativas -> . LOG10 PARIZQ expression PARDER
    (53) nativas -> . COS PARIZQ expression PARDER
    (54) nativas -> . SIN PARIZQ expression PARDER
    (55) nativas -> . TAN PARIZQ expression PARDER
    (56) nativas -> . SQRT PARIZQ expression PARDER
    (57) nativas -> . UPPERCASE PARIZQ expression PARDER
    (58) nativas -> . LOWERCASE PARIZQ expression PARDER
    (59) nativas -> . TOSTRING PARIZQ expression PARDER
    (60) nativas -> . TOFLOAT PARIZQ expression PARDER
    (61) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (62) nativas -> . TYPEOF PARIZQ expression PARDER
    (63) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (64) nativas -> . LENGTH PARIZQ expression PARDER
    (65) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (66) nativas -> . POP PARIZQ expression PARDER
    (107) create_struct -> . STRUCT ID attList END
    (110) declare_struct -> . ID DOSP DOSP ID
    (111) assign_access -> . ID PUNTO ID IGUAL expression

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    LOCAL           shift and go to state 24
    GLOBAL          shift and go to state 26
    ID              shift and go to state 25
    FUNCTION        shift and go to state 27
    RETURN          shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    LOG             shift and go to state 34
    LOG10           shift and go to state 35
    COS             shift and go to state 36
    SIN             shift and go to state 37
    TAN             shift and go to state 38
    SQRT            shift and go to state 39
    UPPERCASE       shift and go to state 40
    LOWERCASE       shift and go to state 41
    TOSTRING        shift and go to state 42
    TOFLOAT         shift and go to state 43
    TRUNC           shift and go to state 44
    TYPEOF          shift and go to state 45
    PARSE           shift and go to state 46
    LENGTH          shift and go to state 47
    PUSH            shift and go to state 48
    POP             shift and go to state 49
    STRUCT          shift and go to state 50

    instruccion                    shift and go to state 51
    print_instr                    shift and go to state 4
    println_instr                  shift and go to state 5
    definicion_instr               shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion_arreglo_instr       shift and go to state 8
    definicion_asignacion_instr    shift and go to state 9
    call_function                  shift and go to state 10
    declare_function               shift and go to state 11
    return_state                   shift and go to state 12
    break_state                    shift and go to state 13
    continue_state                 shift and go to state 14
    if_state                       shift and go to state 15
    while_state                    shift and go to state 16
    for_state                      shift and go to state 17
    nativas                        shift and go to state 18
    create_struct                  shift and go to state 19
    declare_struct                 shift and go to state 20
    assign_access                  shift and go to state 21

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 3 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    LOG             reduce using rule 3 (instrucciones -> instruccion .)
    LOG10           reduce using rule 3 (instrucciones -> instruccion .)
    COS             reduce using rule 3 (instrucciones -> instruccion .)
    SIN             reduce using rule 3 (instrucciones -> instruccion .)
    TAN             reduce using rule 3 (instrucciones -> instruccion .)
    SQRT            reduce using rule 3 (instrucciones -> instruccion .)
    UPPERCASE       reduce using rule 3 (instrucciones -> instruccion .)
    LOWERCASE       reduce using rule 3 (instrucciones -> instruccion .)
    TOSTRING        reduce using rule 3 (instrucciones -> instruccion .)
    TOFLOAT         reduce using rule 3 (instrucciones -> instruccion .)
    TRUNC           reduce using rule 3 (instrucciones -> instruccion .)
    TYPEOF          reduce using rule 3 (instrucciones -> instruccion .)
    PARSE           reduce using rule 3 (instrucciones -> instruccion .)
    LENGTH          reduce using rule 3 (instrucciones -> instruccion .)
    PUSH            reduce using rule 3 (instrucciones -> instruccion .)
    POP             reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print_instr . PTCOMA

    PTCOMA          shift and go to state 52


state 5

    (5) instruccion -> println_instr . PTCOMA

    PTCOMA          shift and go to state 53


state 6

    (6) instruccion -> definicion_instr . PTCOMA

    PTCOMA          shift and go to state 54


state 7

    (7) instruccion -> asignacion_instr . PTCOMA

    PTCOMA          shift and go to state 55


state 8

    (8) instruccion -> asignacion_arreglo_instr . PTCOMA

    PTCOMA          shift and go to state 56


state 9

    (9) instruccion -> definicion_asignacion_instr . PTCOMA

    PTCOMA          shift and go to state 57


state 10

    (10) instruccion -> call_function . PTCOMA

    PTCOMA          shift and go to state 58


state 11

    (11) instruccion -> declare_function . PTCOMA

    PTCOMA          shift and go to state 59


state 12

    (12) instruccion -> return_state . PTCOMA

    PTCOMA          shift and go to state 60


state 13

    (13) instruccion -> break_state . PTCOMA

    PTCOMA          shift and go to state 61


state 14

    (14) instruccion -> continue_state . PTCOMA

    PTCOMA          shift and go to state 62


state 15

    (15) instruccion -> if_state . PTCOMA

    PTCOMA          shift and go to state 63


state 16

    (16) instruccion -> while_state . PTCOMA

    PTCOMA          shift and go to state 64


state 17

    (17) instruccion -> for_state . PTCOMA

    PTCOMA          shift and go to state 65


state 18

    (18) instruccion -> nativas . PTCOMA

    PTCOMA          shift and go to state 66


state 19

    (19) instruccion -> create_struct . PTCOMA

    PTCOMA          shift and go to state 67


state 20

    (20) instruccion -> declare_struct . PTCOMA

    PTCOMA          shift and go to state 68


state 21

    (21) instruccion -> assign_access . PTCOMA

    PTCOMA          shift and go to state 69


state 22

    (67) print_instr -> PRINT . PARIZQ exp_list PARDER

    PARIZQ          shift and go to state 70


state 23

    (68) println_instr -> PRINTLN . PARIZQ exp_list PARDER

    PARIZQ          shift and go to state 71


state 24

    (74) definicion_instr -> LOCAL . ID
    (77) asignacion_instr -> LOCAL . ID IGUAL expression
    (80) definicion_asignacion_instr -> LOCAL . ID IGUAL expression DOSP DOSP tipo

    ID              shift and go to state 72


state 25

    (76) asignacion_instr -> ID . IGUAL expression
    (82) asignacion_arreglo_instr -> ID . index_list IGUAL expression
    (79) definicion_asignacion_instr -> ID . IGUAL expression DOSP DOSP tipo
    (83) call_function -> ID . PARIZQ PARDER
    (84) call_function -> ID . PARIZQ exp_list PARDER
    (110) declare_struct -> ID . DOSP DOSP ID
    (111) assign_access -> ID . PUNTO ID IGUAL expression
    (87) index_list -> . index_list CORCHETEIZQ expression CORCHETEDER
    (88) index_list -> . CORCHETEIZQ expression CORCHETEDER

    IGUAL           shift and go to state 73
    PARIZQ          shift and go to state 76
    DOSP            shift and go to state 75
    PUNTO           shift and go to state 77
    CORCHETEIZQ     shift and go to state 78

    index_list                     shift and go to state 74

state 26

    (75) definicion_instr -> GLOBAL . ID
    (78) asignacion_instr -> GLOBAL . ID IGUAL expression
    (81) definicion_asignacion_instr -> GLOBAL . ID IGUAL expression DOSP DOSP tipo

    ID              shift and go to state 79


state 27

    (90) declare_function -> FUNCTION . ID PARIZQ PARDER statement END
    (91) declare_function -> FUNCTION . ID PARIZQ dec_params PARDER statement END

    ID              shift and go to state 80


state 28

    (105) return_state -> RETURN .
    (106) return_state -> RETURN . expression
    (22) expression -> . MENOS expression
    (23) expression -> . NOT expression
    (24) expression -> . expression MAS expression
    (25) expression -> . expression MENOS expression
    (26) expression -> . expression POR expression
    (27) expression -> . expression DIVIDIDO expression
    (28) expression -> . expression POTENCIA expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression MAYQUE expression
    (31) expression -> . expression MENQUE expression
    (32) expression -> . expression MENIGUALQUE expression
    (33) expression -> . expression MAYIGUALQUE expression
    (34) expression -> . expression IGUALQUE expression
    (35) expression -> . expression NIGUALQUE expression
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . final_expression
    (39) final_expression -> . PARIZQ expression PARDER
    (40) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (41) final_expression -> . DECIMAL
    (42) final_expression -> . ENTERO
    (43) final_expression -> . CADENA
    (44) final_expression -> . CARACTER
    (45) final_expression -> . ID
    (46) final_expression -> . ID index_list
    (47) final_expression -> . TRUE
    (48) final_expression -> . FALSE
    (49) final_expression -> . call_function
    (50) final_expression -> . nativas
    (83) call_function -> . ID PARIZQ PARDER
    (84) call_function -> . ID PARIZQ exp_list PARDER
    (51) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (52) nativas -> . LOG10 PARIZQ expression PARDER
    (53) nativas -> . COS PARIZQ expression PARDER
    (54) nativas -> . SIN PARIZQ expression PARDER
    (55) nativas -> . TAN PARIZQ expression PARDER
    (56) nativas -> . SQRT PARIZQ expression PARDER
    (57) nativas -> . UPPERCASE PARIZQ expression PARDER
    (58) nativas -> . LOWERCASE PARIZQ expression PARDER
    (59) nativas -> . TOSTRING PARIZQ expression PARDER
    (60) nativas -> . TOFLOAT PARIZQ expression PARDER
    (61) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (62) nativas -> . TYPEOF PARIZQ expression PARDER
    (63) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (64) nativas -> . LENGTH PARIZQ expression PARDER
    (65) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (66) nativas -> . POP PARIZQ expression PARDER

    PTCOMA          reduce using rule 105 (return_state -> RETURN .)
    MENOS           shift and go to state 82
    NOT             shift and go to state 83
    PARIZQ          shift and go to state 85
    CORCHETEIZQ     shift and go to state 86
    DECIMAL         shift and go to state 87
    ENTERO          shift and go to state 88
    CADENA          shift and go to state 89
    CARACTER        shift and go to state 90
    ID              shift and go to state 91
    TRUE            shift and go to state 92
    FALSE           shift and go to state 93
    LOG             shift and go to state 34
    LOG10           shift and go to state 35
    COS             shift and go to state 36
    SIN             shift and go to state 37
    TAN             shift and go to state 38
    SQRT            shift and go to state 39
    UPPERCASE       shift and go to state 40
    LOWERCASE       shift and go to state 41
    TOSTRING        shift and go to state 42
    TOFLOAT         shift and go to state 43
    TRUNC           shift and go to state 44
    TYPEOF          shift and go to state 45
    PARSE           shift and go to state 46
    LENGTH          shift and go to state 47
    PUSH            shift and go to state 48
    POP             shift and go to state 49

    expression                     shift and go to state 81
    final_expression               shift and go to state 84
    call_function                  shift and go to state 94
    nativas                        shift and go to state 95

state 29

    (103) break_state -> BREAK .

    PTCOMA          reduce using rule 103 (break_state -> BREAK .)


state 30

    (104) continue_state -> CONTINUE .

    PTCOMA          reduce using rule 104 (continue_state -> CONTINUE .)


state 31

    (94) if_state -> IF . expression statement END
    (95) if_state -> IF . expression statement ELSE statement END
    (96) if_state -> IF . expression statement else_if_list END
    (22) expression -> . MENOS expression
    (23) expression -> . NOT expression
    (24) expression -> . expression MAS expression
    (25) expression -> . expression MENOS expression
    (26) expression -> . expression POR expression
    (27) expression -> . expression DIVIDIDO expression
    (28) expression -> . expression POTENCIA expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression MAYQUE expression
    (31) expression -> . expression MENQUE expression
    (32) expression -> . expression MENIGUALQUE expression
    (33) expression -> . expression MAYIGUALQUE expression
    (34) expression -> . expression IGUALQUE expression
    (35) expression -> . expression NIGUALQUE expression
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . final_expression
    (39) final_expression -> . PARIZQ expression PARDER
    (40) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (41) final_expression -> . DECIMAL
    (42) final_expression -> . ENTERO
    (43) final_expression -> . CADENA
    (44) final_expression -> . CARACTER
    (45) final_expression -> . ID
    (46) final_expression -> . ID index_list
    (47) final_expression -> . TRUE
    (48) final_expression -> . FALSE
    (49) final_expression -> . call_function
    (50) final_expression -> . nativas
    (83) call_function -> . ID PARIZQ PARDER
    (84) call_function -> . ID PARIZQ exp_list PARDER
    (51) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (52) nativas -> . LOG10 PARIZQ expression PARDER
    (53) nativas -> . COS PARIZQ expression PARDER
    (54) nativas -> . SIN PARIZQ expression PARDER
    (55) nativas -> . TAN PARIZQ expression PARDER
    (56) nativas -> . SQRT PARIZQ expression PARDER
    (57) nativas -> . UPPERCASE PARIZQ expression PARDER
    (58) nativas -> . LOWERCASE PARIZQ expression PARDER
    (59) nativas -> . TOSTRING PARIZQ expression PARDER
    (60) nativas -> . TOFLOAT PARIZQ expression PARDER
    (61) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (62) nativas -> . TYPEOF PARIZQ expression PARDER
    (63) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (64) nativas -> . LENGTH PARIZQ expression PARDER
    (65) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (66) nativas -> . POP PARIZQ expression PARDER
